Instalação React Slick e componente criado do Carousel e adicionado arquivos a Home

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
     <meta property="og:locale" content="pt_BR">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/gramfilm256.png" />
-   
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css">
+
     <title>GramFilms</title>
   </head>
   <body>
